# ownership

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml  test.yml
changes/: ~derive.feature.md  ~time.feature.md  ~types.feature.md
derive/: Cargo.toml
derive/src/: ast.rs  attributes.rs  bounds.rs  context.rs  dummy.rs  expand.rs  lib.rs  name.rs  parameters.rs
src/: array.rs  boxed.rs  c_string.rs  cmp.rs  collections.rs  cow.rs  duration.rs  hash.rs  iterable.rs  lib.rs  macros.rs  marker.rs  net.rs  never.rs  non_zero.rs  os_string.rs  primitive.rs  simple.rs  string.rs  time.rs  tuple.rs  unit.rs  vec.rs
