[package]
name = "ownership"
version = "0.1.1"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.89"
description = "Obtaining ownership."
documentation = "https://docs.rs/ownership"
readme = "README.md"
repository = "https://github.com/nekitdev/ownership"
license = "MIT"
keywords = ["ownership", "owned"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]

[dependencies.cfg-if]
version = "1.0.1"

[features]
default = ["std"]
std = []
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
