[workspace]
members = ["derive"]

[workspace.package]
version = "0.2.3"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/nekitdev/ownership"
license = "MIT"

[package]
name = "ownership"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Obtaining ownership."
documentation = "https://docs.rs/ownership"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["ownership", "owned"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]

[workspace.dependencies.non-empty-str]
version = "0.11.0"

[workspace.dependencies.proc-macro2]
version = "1.0.101"

[workspace.dependencies.quote]
version = "1.0.41"

[workspace.dependencies.syn]
version = "2.0.106"
features = ["visit"]

[dependencies.ownership-derive]
path = "derive"
version = "0.2.3"
optional = true

[features]
default = ["std"]
derive = ["dep:ownership-derive"]
std = []
alloc = []

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
